# media-dl-bot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  downloader.py  main.py  pyproject.toml  snapchat.py  utils.py
.github/workflows/: release.yml
