[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-dl-bot"
version = "0.1.0"
description = "Self-hosted Telegram bot for downloading media from YouTube, TikTok, X, Facebook, Instagram, Twitch, and Snapchat."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Ibrahim" },
]
keywords = ["telegram", "bot", "yt-dlp", "downloader", "snapchat", "youtube", "tiktok"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "python-telegram-bot==22.7",
    "yt-dlp>=2025.1.1",
    # NOTE: `playwright` is provided by the Playwright Docker base image
    # (mcr.microsoft.com/playwright/python:v1.48.0-noble). It is intentionally
    # NOT listed here to avoid duplicating ~108 MB inside the image.
    # If running outside Docker (bare metal), install separately:
    #   pip install playwright==1.48.0 && playwright install chromium
    "aiohttp==3.10.10",
    "aiofiles==24.1.0",
]

[project.urls]
Homepage = "https://github.com/ibrhoom/media-dl-bot"
Repository = "https://github.com/ibrhoom/media-dl-bot"
Issues = "https://github.com/ibrhoom/media-dl-bot/issues"
Changelog = "https://github.com/ibrhoom/media-dl-bot/blob/main/CHANGELOG.md"

[project.scripts]
media-dl-bot = "main:main"

[tool.setuptools]
# Flat layout: ship the four top-level Python modules as the package contents.
py-modules = ["main", "downloader", "snapchat", "utils"]
